--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "path": "^0.12.7",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-drag-drawer": "^3.3.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.0.7",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
@@ -24,7 +25,7 @@
     "typescript": "3.6.4"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -37,8 +38,9 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts,tsx}": [
-      "eslint . --fix",
+    "*.{js,jsx,ts,tsx}": [
+      "pretty-quick --staged",
+      "eslint src/ --fix",
       "git add"
     ]
   },
@@ -59,6 +61,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.9",
+    "@types/react-facebook-login": "^4.1.0",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^2.5.0",
