--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.15",
+    "socket.io-client": "^2.3.0",
     "typescript": "3.6.4"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
